# oip-ecmc

./: README.md  pyproject.toml
default_config/: convert_access_to_parquet.yaml  ecmc_to_csv.yaml  scrape_from_ecmc.yaml  transform_ecmc.yaml
ecmc_scraper/: __init__.py  __main__.py  config.py  const.py  convert_production_summaries_access_to_parquet.py  enum.py  log_config.yaml  logger.py  main.py  scrape_production_summaries.py  transform_production_summaries.py  utils.py
oip_ecmc_app/: convert_access_to_parquet.py  ecmc_to_csv.py  load_from_xlsx.py  scrape_from_ecmc.py  transform_ecmc.py
oip_ecmc_app/oip_ecmc/: config.py  log_config.yaml  logger.py  setup.py  utils.py
