[tool.poetry]
name = "ecmc-scraper"
version = "0.2.1"
description = "Scrapes the ECMC download page. Includes transform scripts used by CDPHE OIP team."
authors = ["John Evans <john.p.evans@state.co.us>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
polars = "^0.20.7"
arrow-odbc = "^4.0.0"
requests = "^2.31.0"
typer = {extras = ["all"], version = "^0.12.3"}
pyyaml = "^6.0.1"

[tool.poetry.scripts]
ecmc-scraper = "ecmc_scraper.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"